[package]
name = "nw-board-support"
version = "0.0.1"
authors = ["willemml <willem@leit.so>"]
edition = "2021"
license = "MIT"
description = "Board support package for the Numworks n0110 calculator."
repository = "https://github.com/willemml/rustworks"
homepage = "https://github.com/willemml/rustworks"

[dependencies]
cortex-m = "0.7"

[dependencies.stm32f7]
version = "0.15.1"
features = ["stm32f730"]

[lib]
name = "nw_board_support"
path = "src/lib.rs"
