[package]
name = "nw-board-support"
version = "0.0.1"
authors = ["willemml <willem@leit.so>"]
edition = "2021"
license = "MIT"
description = "Board support package for the Numworks n0110 calculator."
repository = "https://github.com/willemml/rustworks"
homepage = "https://github.com/willemml/rustworks"

[lib]
name = "nw_board_support"
path = "src/lib.rs"

[dependencies]
cortex-m = "0.7"
embedded-hal = "0.2"
stm32f7 = { version = "0.15", features = ["stm32f730"], optional = true }
stm32h7 = { version = "0.15", features = ["stm32h735"], optional = true }

# USB and DFU
usb-device = { version = "0.2", optional = true }
usbd-dfu = { version = "0.3", optional = true }
synopsys-usb-otg = { version = "0.3", features = ["fs", "cortex-m"], optional = true }
stm32-usbd = { version = "0.6", optional = true }

# Keypad
num-derive = { version = "0.3", optional = true }
num-traits = { version = "0.2", default-features = false, optional = true }

# Display
display-interface = { version = "0.4", optional = true }
mipidsi = { version = "0.7", optional = true }

[features]
default = ["keypad", "dfu", "display", "external_flash", "n0120", "n0110"]
external_flash = []
display = ["dep:display-interface", "dep:mipidsi"]
keypad = ["dep:num-derive", "dep:num-traits"]
dfu = ["usb", "dep:usbd-dfu", "external_flash"]
usb = ["dep:stm32-usbd", "dep:usb-device", "dep:synopsys-usb-otg"]
n0110 = ["dep:stm32f7"]
n0120 = ["dep:stm32h7"]

